@@ -1,6 +1,17 @@
-.. figure:: images/biohazard.png
-   :class: with-border 
+This is the default figure class:
+
+.. figure:: images/title.png
 
    This is the caption.
 
-   And a bit more text.
+   And this is the legend.
+
+This is a figure with ``with-border`` class:
+
+.. class:: with-border
+.. figure:: images/title.png
+
+   This is the caption.
+
+   And this is the legend.
+
